Create data base tables

--- a/Profiling/Extraction.ipynb
+++ b/Profiling/Extraction.ipynb
@@ -1,15 +1,18 @@
 {
  "cells": [
   {
-   "cell_type": "heading",
-   "metadata": {
-    "collapsed": true
-   },
-   "level": 1,
+   "cell_type": "markdown",
    "source": [
     "# Extraction\n",
-    "\n"
-   ]
+    "\n",
+    "First, we will extract the review Ratings and review Body into a relational data base. "
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
   },
   {
    "cell_type": "code",
@@ -30,16 +33,25 @@
    "source": [
     "conn = sqlite3.connect(\"reviews.db\")\n",
     "with conn: \n",
-    "    conn.execute(\"\"\"\n",
-    "        CREATE TABLE IF NOT EXISTS\n",
-    "            NODE TEXT PRIMARY KEY, \n",
-    "            URL TEXT,\n",
-    "            REVIEWBODY TEXT, \n",
-    "            REVIEWRATING TEXT\n",
-    "    \"\"\")\n",
     "    \n",
     "    conn.execute(\"\"\"\n",
+    "            CREATE TABLE IF NOT EXISTS\n",
+    "                taxonomies(NODE TEXT PRIMARY KEY,\n",
+    "                        URL TEXT,\n",
+    "                        BODY TEXT,\n",
+    "                        RATINGVALUE TEXT, \n",
+    "                        WORSTRATING TEXT,\n",
+    "                        BESTRATING TEXT,\n",
+    "                        RATINGCOUNT TEXT,\n",
+    "                        )\n",
+    "        \"\"\")\n",
+    "       \n",
+    "    conn.execute(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS\n",
+    "            reviews(NODE TEXT,\n",
+    "                    URL TEXT,\n",
+    "                    PRIMARY KEY (NODE, URL)\n",
+    "                    )\n",
     "    \"\"\")"
    ]
   }
@@ -61,6 +73,15 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
+  },
+  "pycharm": {
+   "stem_cell": {
+    "cell_type": "raw",
+    "source": [],
+    "metadata": {
+     "collapsed": false
+    }
+   }
   }
  },
  "nbformat": 4,
