--- a/Extraction_Profiling/Extraction.ipynb
+++ b/Extraction_Profiling/Extraction.ipynb
@@ -44,7 +44,7 @@
     "with conn: \n",
     "    conn.execute(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS\n",
-    "            taxonomies(\n",
+    "            moviesreviews(\n",
     "                NODE TEXT,\n",
     "                URL TEXT,\n",
     "                REVIEWBODY TEXT,\n",
@@ -52,14 +52,6 @@
     "                ITEMREVIEWED TEXT,\n",
     "                REVIEWASPECT TEXT,\n",
     "                PRIMARY KEY (NODE, URL))\n",
-    "    \"\"\")\n",
-    "       \n",
-    "    conn.execute(\"\"\"\n",
-    "        CREATE TABLE IF NOT EXISTS\n",
-    "            reviews(NODE TEXT,\n",
-    "                URL TEXT,\n",
-    "                PRIMARY KEY (NODE, URL)\n",
-    "                )\n",
     "    \"\"\")"
    ]
   },
@@ -255,13 +247,27 @@
     "                print(\"failed to execute for params \" + str(props))\n",
     "\n",
     "    print(\"inserted \" + str(inserted) + \" lines and skipped \" + str(skipped_lines) + \" lines\")\n",
-    "    print(\"Done processing the review file\")\n"
+    "    print(\"Done processing the review file\")"
    ],
    "metadata": {
     "collapsed": false,
     "pycharm": {
      "name": "#%%\n",
      "is_executing": false
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "\n"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
     }
    }
   }
@@ -283,15 +289,6 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
    "version": "2.7.6"
-  },
-  "pycharm": {
-   "stem_cell": {
-    "cell_type": "raw",
-    "source": [],
-    "metadata": {
-     "collapsed": false
-    }
-   }
   }
  },
  "nbformat": 4,
