clean up Jupyter extract MovieReviews

--- a/Extraction_Profiling/ExtractmovieReviews.ipynb
+++ b/Extraction_Profiling/ExtractmovieReviews.ipynb
@@ -8054,9 +8054,7 @@
     "            not_url = 0\n",
     "            inserted = 0\n",
     "            failed_updates = 0\n",
-    "            # head = [next(f) for x in range(5000000)]\n",
     "            for line in f:\n",
-    "            # for line in head:\n",
     "                i += 1\n",
     "                if not url_pattern.search(line):\n",
     "                    not_url += 1\n",
@@ -8074,10 +8072,9 @@
     "                predicate = props[1]\n",
     "                obj = props[2]\n",
     "                source = props[3]\n",
-    "                conn.execute(\"INSERT OR IGNORE INTO MOVIEREVIEWS (NODE, URL) VALUES (?,?);\",(subj, source))\n",
+    "                c.execute(\"INSERT OR IGNORE INTO MOVIEREVIEWS (NODE, URL) VALUES (?,?);\",(subj, source))\n",
     "                update_query = \"UPDATE MOVIEREVIEWS SET \"\n",
     "                params = [obj, subj, source]\n",
-    "                # print(line)\n",
     "                if predicate.lower() == \"http://schema.org/Review/reviewBody\".lower():\n",
     "                    update_query += \"REVIEWBODY = ? \"\n",
     "                if predicate.lower() == \"http://schema.org/Review/description\".lower():\n",
@@ -8092,82 +8089,16 @@
     "                    update_query += \"WORSTRATING = ? \"\n",
     "                update_query += \"WHERE NODE = ? AND URL = ?;\"\n",
     "                try:\n",
-    "                    print(update_query, params)\n",
     "                    conn.execute(update_query, params)\n",
-    "                  # print(props)\n",
     "                    inserted += 1\n",
     "                except:\n",
-    "                    logging.debug(\"failed to execute for params \" + str(props))\n",
+    "                    logging.debug(\"failed to execute for params \" + str(update_query) + str(props))\n",
     "                    failed_updates += 1\n",
     "\n",
     "logging.debug(\"detected \" + str(detected) + \", inserted: \" + str(inserted) +\" lines out of \" + str(i) + \"; not in taxo: \" + str(not_taxo))\n",
-    "logging.debug(\"Done processing the movie reviews file from Movie.gz and Review.gz after the database got deleted\")"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 11,
-   "outputs": [],
-   "source": [
+    "logging.debug(\"Done processing the movie reviews file from Movie.gz and Review.gz after the database got deleted\")\n",
+    "\n",
     "conn.commit()\n"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Empty DataFrame\nColumns: [NODE, URL, REVIEWBODY, RATING, REVIEWRATING, BESTRATING, WORSTRATING]\nIndex: []",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>NODE</th>\n      <th>URL</th>\n      <th>REVIEWBODY</th>\n      <th>RATING</th>\n      <th>REVIEWRATING</th>\n      <th>BESTRATING</th>\n      <th>WORSTRATING</th>\n    </tr>\n  </thead>\n  <tbody>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 8,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Statistics\n",
-    "moviesdb_path = '../Data/output/moviereviews.db'\n",
-    "conn = sqlite3.connect(moviesdb_path)\n",
-    "df = pd.read_sql_query(\"SELECT * from moviereviews\", conn)\n",
-    "df.head()"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(0, 7)\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.describe(include='all')\n",
-    "print(df[df.REVIEWBODY.notnull()].shape)\n",
-    "\n"
    ],
    "metadata": {
     "collapsed": false,
