scrape Movie Reviews on Pycharm

--- a/Extraction_Profiling/ScrapemovieReviews.ipynb
+++ b/Extraction_Profiling/ScrapemovieReviews.ipynb
@@ -8,7 +8,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "from bs4 import BeautifulSoup\n",
     "from requests import get\n",
     "import json\n",
@@ -34,17 +33,17 @@
    ],
    "source": [
     "# Input / Output\n",
-    "db_path = '../Data/input/moviereviews.db'\n",
+    "db_path = '../Data/moviereviews.db'\n",
     "\n",
     "# Output\n",
-    "log_path = '../Logs/test.log'\n",
+    "log_path = '../Logs/movieReviews.log'\n",
     "\n",
-    "# logger = logging.getLogger()\n",
-    "# fhandler = logging.FileHandler(filename=moviereviewLog_path, mode='a')\n",
-    "# formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
-    "# fhandler.setFormatter(formatter)\n",
-    "# logger.addHandler(fhandler)\n",
-    "# logger.setLevel(logging.DEBUG)\n",
+    "logger = logging.getLogger()\n",
+    "fhandler = logging.FileHandler(filename=moviereviewLog_path, mode='a')\n",
+    "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
+    "fhandler.setFormatter(formatter)\n",
+    "logger.addHandler(fhandler)\n",
+    "logger.setLevel(logging.DEBUG)\n",
     "\n",
     "# conn = sqlite3.connect(db_path)\n",
     "# c = conn.cursor()\n",
