Refactor Extrct movieReviews

--- a/Extraction_Profiling/ExtractmovieReviews.ipynb
+++ b/Extraction_Profiling/ExtractmovieReviews.ipynb
@@ -6,21 +6,32 @@
    "outputs": [],
    "source": [
     "# Imports\n",
-    "import logging, sqlite3, re, gzip, pandas as pd\n",
-    "\n",
+    "import logging, sqlite3, re, gzip, pandas as pd"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
     "# Input:\n",
-    "movies_path = '../Data/input/schema_Movie.gz'\n",
-    "reviews_path= '../Data/input/schema_Review.gz'\n",
+    "movies_path = '../Data/schema_Movie.gz'\n",
+    "reviews_path= '../Data/schema_Review.gz'\n",
     "inputlist = [movies_path,reviews_path]\n",
     "\n",
     "# Output:\n",
-    "moviewreviewslog_path = '../Logs/movieReviews.log'\n",
-    "moviesdb_path = '../Data/input/moviereviews.db'\n",
-    "conn = sqlite3.connect(moviesdb_path)\n",
+    "moviereviewslog_path = '../Logs/movieReviews.log'\n",
+    "moviereviewsdb_path = '../Data/moviereviews.db'\n",
     "\n",
     "# enable Logging:\n",
     "logger = logging.getLogger()\n",
-    "fhandler = logging.FileHandler(filename=moviewreviewslog_path, mode='a')\n",
+    "fhandler = logging.FileHandler(filename=moviereviewslog_path, mode='a')\n",
     "formatter = logging.Formatter('%(asctime)s - %(name)s - %(levelname)s - %(message)s')\n",
     "fhandler.setFormatter(formatter)\n",
     "logger.addHandler(fhandler)\n",
@@ -38,7 +49,7 @@
    "execution_count": 3,
    "outputs": [],
    "source": [
-    "conn = sqlite3.connect(moviesdb_path)\n",
+    "conn = sqlite3.connect(moviereviewsdb_path)\n",
     "c = conn.cursor()\n",
     "c.execute(\"\"\"\n",
     "        CREATE TABLE IF NOT EXISTS\n",
@@ -8073,7 +8084,7 @@
     "                obj = props[2]\n",
     "                source = props[3]\n",
     "                c.execute(\"INSERT OR IGNORE INTO MOVIEREVIEWS (NODE, URL) VALUES (?,?);\",(subj, source))\n",
-    "                update_query = \"UPDATE MOVIEREVIEWS SET \"\n",
+    "                update_query = \"UPDATE moviereviews SET \"\n",
     "                params = [obj, subj, source]\n",
     "                if predicate.lower() == \"http://schema.org/Review/reviewBody\".lower():\n",
     "                    update_query += \"REVIEWBODY = ? \"\n",
@@ -8090,15 +8101,61 @@
     "                update_query += \"WHERE NODE = ? AND URL = ?;\"\n",
     "                try:\n",
     "                    conn.execute(update_query, params)\n",
+    "                    conn.commit()\n",
     "                    inserted += 1\n",
     "                except:\n",
     "                    logging.debug(\"failed to execute for params \" + str(update_query) + str(props))\n",
     "                    failed_updates += 1\n",
     "\n",
     "logging.debug(\"detected \" + str(detected) + \", inserted: \" + str(inserted) +\" lines out of \" + str(i) + \"; not in taxo: \" + str(not_taxo))\n",
-    "logging.debug(\"Done processing the movie reviews file from Movie.gz and Review.gz after the database got deleted\")\n",
+    "logging.debug(\"Done processing the movie reviews file from Movie.gz and Review.gz after the database got deleted\")"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "<sqlite3.Cursor at 0x239c0119650>"
+     },
+     "execution_count": 15,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "merge_query = \"UPDATE moviereviews \"\\\n",
+    "              \"SET REVIEWRATING = (SELECT T.REVIEWRATING FROM moviereviews AS T \"\\\n",
+    "              \"WHERE moviereviews.RATING = T.NODE AND moviereviews.URL = T.URL), \"\\\n",
+    "              \"BESTRATING = (SELECT T.BESTRATING FROM moviereviews AS T \"\\\n",
+    "              \"WHERE moviereviews.RATING = T.NODE AND moviereviews.URL = T.URL), \"\\\n",
+    "              \"WORSTRATING = (SELECT T.WORSTRATING FROM moviereviews AS T \"\\\n",
+    "              \"WHERE moviereviews.RATING = T.NODE AND moviereviews.URL = T.URL) \"\\\n",
+    "              \"WHERE RATING IN (SELECT NODE FROM moviereviews);\"\n",
     "\n",
-    "conn.commit()\n"
+    "c.execute(merge_query)\n",
+    "conn.commit()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "outputs": [],
+   "source": [
+    "\n"
    ],
    "metadata": {
     "collapsed": false,
