--- a/Intermediary/ExtractProductCategories.ipynb
+++ b/Intermediary/ExtractProductCategories.ipynb
@@ -23,11 +23,11 @@
    "outputs": [],
    "source": [
     "# Input\n",
-    "product_path = '../Data/input/schema_Product.gz'\n",
+    "product_path = '../Data/schema_Product.gz'\n",
     "\n",
     "# Output\n",
     "prodcatlog_path = '../Logs/prodCat.log'\n",
-    "prodcatout = '../Data/output/prodCat.txt'\n",
+    "prodcatout = '../Data/prodCat.txt'\n",
     "prodwebsites = '../Data/output/phones_websites.txt'\n",
     "\n",
     "logger = logging.getLogger()\n",
