Extract Prod Cat.Jupy NB

--- a/Intermediary/ExtractProductCategories.ipynb
+++ b/Intermediary/ExtractProductCategories.ipynb
@@ -28,7 +28,7 @@
     "# Output\n",
     "prodcatlog_path = '../Logs/prodCat.log'\n",
     "prodcatout = '../Data/prodCat.txt'\n",
-    "prodwebsites = '../Data/output/phones_websites.txt'\n",
+    "prodwebsites = '../Data/phones_websites.txt'\n",
     "\n",
     "logger = logging.getLogger()\n",
     "fhandler = logging.FileHandler(filename=prodcatlog_path, mode='a')\n",
@@ -6035,10 +6035,6 @@
     "    skipped = 0\n",
     "    not_taxo = 0\n",
     "    inserted = 0\n",
-    "\n",
-    "    # head = [next(f) for x in range(100000)]\n",
-    "    #print(head)\n",
-    "    # for line in head:\n",
     "    for line in iter(f.readline, \"\"):\n",
     "        i += 1\n",
     "        if not taxo_pattern.search(line):\n",
@@ -6078,32 +6074,6 @@
     "with open(prodcatout,'r') as file:\n",
     "    for line in file:\n",
     "        data.append(line.strip())\n",
-    "\n",
-    "print(len(data))"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "pycharm": {
-     "name": "#%%\n"
-    }
-   }
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "        prodcat\ncount   8780830\nunique   653749\ntop      \"Null\"\nfreq     195739",
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>prodcat</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>count</th>\n      <td>8780830</td>\n    </tr>\n    <tr>\n      <th>unique</th>\n      <td>653749</td>\n    </tr>\n    <tr>\n      <th>top</th>\n      <td>\"Null\"</td>\n    </tr>\n    <tr>\n      <th>freq</th>\n      <td>195739</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
-     },
-     "execution_count": 16,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# df = pd.DataFrame.from_dict(data)\n",
     "df = pd.DataFrame({'prodcat' :data})\n",
     "df.describe(include='all')"
    ],
@@ -6224,16 +6194,11 @@
     "    skipped = 0\n",
     "    not_taxo = 0\n",
     "    inserted = 0\n",
-    "\n",
-    "    # head = [next(f) for x in range(500000)]\n",
-    "    # print(head)\n",
-    "    # for line in head:\n",
     "    for line in iter(f.readline, \"\"):\n",
     "        i += 1\n",
     "        if not taxo_pattern.search(line):\n",
     "            not_taxo += 1\n",
     "            continue\n",
-    "        #print(line)\n",
     "        match = split_pattern.match(line)\n",
     "        if match is None:\n",
     "            skipped += 1\n",
@@ -6245,13 +6210,11 @@
     "        source = props[3]\n",
     "        try:\n",
     "            obj = str(obj).lower()\n",
-    "            # print(obj)\n",
     "        except:\n",
     "            pass\n",
     "        else:\n",
     "            pass\n",
     "        if any(ext in obj for ext in phone_lst):\n",
-    "            # print(source)\n",
     "            detected += 1\n",
     "            with open(prodwebsites,'a') as file:\n",
     "                file.write( source + \"\\n\")\n",
