extract product information

--- a/Intermediary/ExtractProductCategories.ipynb
+++ b/Intermediary/ExtractProductCategories.ipynb
@@ -28,7 +28,7 @@
     "# Output\n",
     "prodcatlog_path = '../Logs/prodCat.log'\n",
     "prodcatout = '../Data/prodCat.txt'\n",
-    "prodwebsites = '../Data/phones_websites.txt'\n",
+    "prodwebsites = '../Data/products_sites.txt'\n",
     "\n",
     "logger = logging.getLogger()\n",
     "fhandler = logging.FileHandler(filename=prodcatlog_path, mode='a')\n",
