get potential sites for phonw reviews

--- a/Intermediary/phoneWebsites.ipynb
+++ b/Intermediary/phoneWebsites.ipynb
@@ -2,25 +2,28 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-03T20:17:20.910531Z",
-     "start_time": "2020-08-03T20:17:20.501305Z"
+     "start_time": "2020-08-04T11:23:45.655Z"
     }
    },
    "outputs": [],
    "source": [
-    "import pandas as pd, gzip, re, "
+    "import pandas as pd, gzip, re, tldextract\n",
+    "from urllib.parse import urlparse\n",
+    "from bs4 import BeautifulSoup\n",
+    "from requests import get\n",
+    "from langdetect import detect"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-03T20:17:22.312598Z",
-     "start_time": "2020-08-03T20:17:22.307456Z"
+     "end_time": "2020-08-04T09:05:09.761262Z",
+     "start_time": "2020-08-04T09:05:09.732200Z"
     }
    },
    "outputs": [],
@@ -83,11 +86,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-03T20:30:00.491945Z",
-     "start_time": "2020-08-03T20:30:00.339326Z"
+     "end_time": "2020-08-04T09:06:48.968027Z",
+     "start_time": "2020-08-04T09:06:48.517197Z"
     }
    },
    "outputs": [
@@ -144,7 +147,7 @@
        "freq                                                 2296"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -157,11 +160,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-03T20:32:49.205923Z",
-     "start_time": "2020-08-03T20:32:49.114894Z"
+     "end_time": "2020-08-04T09:06:53.313910Z",
+     "start_time": "2020-08-04T09:06:52.863745Z"
     }
    },
    "outputs": [
@@ -200,7 +203,7 @@
        "    </tr>\n",
        "    <tr>\n",
        "      <td>top</td>\n",
-       "      <td>https://i-spare.ru/zapchasti-dlya-iphone/zapch...</td>\n",
+       "      <td>https://nottabelle.com/ru/rozy-v-kolbe/king-fu...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <td>freq</td>\n",
@@ -214,11 +217,11 @@
        "                                                      url\n",
        "count                                               15823\n",
        "unique                                              15823\n",
-       "top     https://i-spare.ru/zapchasti-dlya-iphone/zapch...\n",
+       "top     https://nottabelle.com/ru/rozy-v-kolbe/king-fu...\n",
        "freq                                                    1"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,11 +235,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-08-03T20:33:29.502233Z",
-     "start_time": "2020-08-03T20:33:29.476455Z"
+     "end_time": "2020-08-04T09:10:59.385833Z",
+     "start_time": "2020-08-04T09:10:56.143209Z"
     }
    },
    "outputs": [
@@ -262,64 +265,59 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>url</th>\n",
+       "      <th>netloc</th>\n",
+       "      <th>suffix</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <td>0</td>\n",
-       "      <td>http://www.speckproducts.com/apple/iphone-case...</td>\n",
+       "      <td>count</td>\n",
+       "      <td>15823</td>\n",
+       "      <td>15823</td>\n",
+       "      <td>15823</td>\n",
        "    </tr>\n",
        "    <tr>\n",
+       "      <td>unique</td>\n",
+       "      <td>15823</td>\n",
+       "      <td>563</td>\n",
+       "      <td>70</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>top</td>\n",
+       "      <td>https://nottabelle.com/ru/rozy-v-kolbe/king-fu...</td>\n",
+       "      <td>www.speckproducts.com</td>\n",
+       "      <td>com</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <td>freq</td>\n",
        "      <td>1</td>\n",
-       "      <td>http://www.speckproducts.com/apple/iphone-case...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>2</td>\n",
-       "      <td>http://www.speckproducts.com/apple/iphone-case...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>3</td>\n",
-       "      <td>https://www.crutchfield.com/S-wvUmH5Cml0s/p_59...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <td>4</td>\n",
-       "      <td>https://www.homechoicestores.com/home-choice-home</td>\n",
+       "      <td>3740</td>\n",
+       "      <td>8785</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "                                                 url\n",
-       "0  http://www.speckproducts.com/apple/iphone-case...\n",
-       "1  http://www.speckproducts.com/apple/iphone-case...\n",
-       "2  http://www.speckproducts.com/apple/iphone-case...\n",
-       "3  https://www.crutchfield.com/S-wvUmH5Cml0s/p_59...\n",
-       "4  https://www.homechoicestores.com/home-choice-home"
+       "                                                      url  \\\n",
+       "count                                               15823   \n",
+       "unique                                              15823   \n",
+       "top     https://nottabelle.com/ru/rozy-v-kolbe/king-fu...   \n",
+       "freq                                                    1   \n",
+       "\n",
+       "                       netloc suffix  \n",
+       "count                   15823  15823  \n",
+       "unique                    563     70  \n",
+       "top     www.speckproducts.com    com  \n",
+       "freq                     3740   8785  "
       ]
      },
-     "execution_count": 13,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "#     contains phone or smartphone\n",
-    "df[df['url'].str.contains(\"phone\")]\n",
-    "df.head()\n",
-    "#     is from english domain"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv(prodwebsites, sep=\" \", header=None)\n",
-    "df.columns = [\"url\"]\n",
-    "df.describe()\n",
-    "\n",
     "def getNetloc(row):\n",
     "    try:\n",
     "\n",
@@ -344,11 +342,84 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-08-04T09:27:06.169393Z",
+     "start_time": "2020-08-04T09:27:06.130325Z"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                               url\n",
+      "0            www.speckproducts.com\n",
+      "1              www.crutchfield.com\n",
+      "2              www.myphonecase.com\n",
+      "3                    www.mvideo.ru\n",
+      "4                     lastprint.ru\n",
+      "..                             ...\n",
+      "558                   itstyle.shop\n",
+      "559              ph.bargainbro.com\n",
+      "560      bigredhair.threadless.com\n",
+      "561       www.jumpingbabyjacks.com\n",
+      "562  cityofpyramids.threadless.com\n",
+      "\n",
+      "[563 rows x 1 columns]\n"
+     ]
+    }
+   ],
+   "source": [
+    "url_list = df['netloc'].value_counts().index.tolist()\n",
+    "df_domains = pd.DataFrame(url_list, columns=['url'])\n",
+    "print(df_domains)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-08-04T09:31:27.468Z"
+    }
+   },
    "outputs": [],
    "source": [
-    "df['netloc'].value_counts().index.tolist()"
+    "# find out if website has english content\n",
+    "# url = 'http://www.speckproducts.com'\n",
+    "# response = get(url)\n",
+    "# html_soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "# print(detect(html_soup.body.text))\n",
+    "\n",
+    "\n",
+    "def detectLang(row):\n",
+    "    try:\n",
+    "        url = row['url']\n",
+    "        response = get(\"http://\" + str(url))\n",
+    "        html_soup = BeautifulSoup(response.text, 'html.parser')\n",
+    "        return detect(html_soup.body.text)\n",
+    "        # return url\n",
+    "    except:\n",
+    "        print(\"exception:\", row['url'])\n",
+    "    else: \n",
+    "        print(\"sad:\", row['url'])\n",
+    "\n",
+    "df_domains['lang'] = df_domains.apply(detectLang, axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "start_time": "2020-08-04T09:36:01.267Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(df_domains)"
    ]
   },
   {
